# kalle-martin-group

./: ProjectHome.md
AM24/report and docs/: AM24 - presentation.pptx  AM24TestResults.xlsx  FurtherDEV.rtf  Group 3 Report.docx  Prey Predators 1.doc
BlackJack/: BlackJack.sln
BlackJack/BlackJack/: BlackJack.cs  BlackJack.csproj  Card.cs  ClassDiagram1.cd  Deck.cs  Kalle.cs  Program.cs
BlackJack/BlackJackGUI/: BlackJackGUI.csproj  BlackJackWindow.Designer.cs  BlackJackWindow.cs  BlackJackWindow.resx  Card.cs  Deck.cs  Form1.Designer.cs  Read Me Semester Project 2.txt
OOPExam/: 01 Class, Abstract Class and Interfaces.pptx  02 Inheritance and Polymorphism.pptx  03 Arrays and Collections.pptx  04 File IO, Object Streams and Exceptions.pptx  05 Windows Control, Events and Event Handlers.pptx  06 Methods, parameters, scope and properties.pptx
OOPExam/Lessons/: Lesson no 04.doc  Lesson no 06.doc  Lesson no 11.doc  M03_LEWIS2058_06_PP_C03.ppt  M05_LEWIS2058_06_PP_C05.ppt  M06_LEWIS2058_06_PP_C06.ppt  M12_LEWIS2058_06_PP_C12.ppt  Time schedule 2009.docx
RSD1/: RDS1 Grp1.pptx
RSD1/Course Documents/: RSD-Project planning and design 1.0.doc  RSD-Project planning and design template.doc
RSD1/presentation/: ExamAudrius.ppt  ExamKalle.ppt  ExamMartin.ppt  ExamPresentation.pptx  ExamRobertas.ppt
RSD1/report/: RSDReport.tex  introduction.tex  references.bib
SSE2/: SSE2 Project Report Group 1.doc
trunk/Rob/Assignment 4/pathplanner/Assign04_Group1/: Assign04.h  Assign04Widget.ui  Assign04Widget2.ui  Assign04_Group1.vcproj  CMakeLists.txt  assign04.cpp
(+3483 files in other folders)
